--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     
     <!-- Edit only below this comment -->
-    <div id="loader"></div>
+    <div class="container">
+         <div id="loader"></div>
+         <div id="circle"></div>
+    </div>
     <!-- Edit only above this comment -->
     
     <header>
